Adicionados favicon e logo na página de login

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,10 +1,7 @@
 <ion-content padding>
 
   <div class="login-content" text-center>
-    <h1>
-      <ion-icon name="logo-instagram"></ion-icon> <br />
-      NEARGRAM
-    </h1>
+    <img src="../../assets/img/neargram_logo.png" width="100%" >
     <br />
     <button ion-button block (click)="loginFalse()">ENTRAR COM INSTAGRAM</button>
   </div>
