Removidos imports não utilizados

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,7 +1,7 @@
 <ion-content padding>
 
   <div class="login-content" text-center>
-    <img src="../../assets/img/neargram_logo.png" width="100%" >
+    <img src="assets/img/neargram_logo.png" width="100%" >
     <br />
     <button ion-button block (click)="loginFalse()">ENTRAR COM INSTAGRAM</button>
   </div>
