Adicionado botão de sair (deleta storage key)

--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -22,4 +22,10 @@
     </ion-card-content>
   </ion-card>
 
+  <ion-card>
+    <ion-list>
+      <button ion-item (click)="removeKeyFromStorage()">Sair</button>
+    </ion-list>
+  </ion-card>
+
 </ion-content>
