--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -12,7 +12,7 @@
 
   <ion-card>
     <ion-card-header>
-      <strong>Distância</strong> <ion-badge float-right>{{distance}}km</ion-badge>
+      <strong>DISTÂNCIA</strong> <ion-badge float-right>{{distance}}km</ion-badge>
     </ion-card-header>
     <ion-card-content>
       <ion-range min="1" max="5" pin [ngModel]="distance" (ngModelChange)="changeDistance($event)">
