--- a/src/pages/locations/locations.html
+++ b/src/pages/locations/locations.html
@@ -9,8 +9,8 @@
 <ion-content>
 
   <ion-list no-lines>
-  <button ion-item *ngFor="let l of locations">
-    {{ l }}
+  <button ion-item *ngFor="let l of locations" (click)="showLocationPage(l)">
+    {{ l.name }}
   </button> 
 </ion-list>
 
