--- a/src/pages/locations/locations.html
+++ b/src/pages/locations/locations.html
@@ -1,7 +1,7 @@
 
 <ion-header>
   <ion-navbar color="primary">
-    <ion-title>Locais próximos</ion-title>
+    <ion-title>{{ 'text_near_locations' | translate }}</ion-title>
   </ion-navbar>
 
 </ion-header>
