--- a/src/pages/media/media.html
+++ b/src/pages/media/media.html
@@ -6,35 +6,9 @@
 
 
 <ion-content>
-  <ion-card class="instagram-media" no-margin>
-    <ion-item>
-      <ion-avatar item-left>
-        <img src="{{media.user.profile_picture}}">
-      </ion-avatar>
-      <p>
-        <span (click)="showUserProfile(media.user.id)">{{media.user.username}}</span> <br />
-        <small>{{media.location.name}}</small>
-      </p> 
-      <ion-icon name="more" item-right></ion-icon>
-    </ion-item>
-
-    <img src="{{media.images.standard_resolution.url}}"> 
-    
-    <ion-row id="icons">
-      <ion-col col-1>
-        <ion-icon (click)="likeMedia(media.id)" name="heart-outline"></ion-icon>
-      </ion-col>
-      <ion-col col-1>
-        <ion-icon name="text"></ion-icon>
-      </ion-col>
-    </ion-row>
-
-    <ion-row class="likes">
-      <p><strong>{{media.likes.count}} curtidas</strong></p>
-    </ion-row>
-
-    <ion-card-content>
-      <p *ngIf="media.caption != null"><strong>{{media.user.username}}</strong> {{media.caption.text}}</p>
-    </ion-card-content>
-  </ion-card>
+  <instagram-card 
+    [medias]="medias"
+    [isGrade]="false" 
+    [imgWidth]="imgWidth">
+  </instagram-card>
 </ion-content>
