--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -2,7 +2,7 @@
 <ion-header>
 
   <ion-navbar color="primary">
-    <ion-title>Opções</ion-title>
+    <ion-title>{{ 'text_settings' | translate }}</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -12,7 +12,7 @@
 
   <ion-card>
     <ion-card-header>
-      <strong>DISTÂNCIA</strong> <ion-badge float-right>{{distance}}km</ion-badge>
+      <strong>{{ 'label_distance' | translate}}</strong> <ion-badge float-right>{{distance}}km</ion-badge>
     </ion-card-header>
     <ion-card-content>
       <ion-range min="1" max="5" pin [ngModel]="distance" (ngModelChange)="changeDistance($event)">
@@ -24,7 +24,7 @@
 
   <ion-card>
     <ion-list>
-      <button ion-item (click)="removeKeyFromStorage()">Sair</button>
+      <button ion-item (click)="removeKeyFromStorage()">{{ 'text_logout' | translate }}</button>
     </ion-list>
   </ion-card>
 
